--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "hardware.inc"]
 	path = src/include/hardware.inc
 	url = https://github.com/gbdev/hardware.inc.git
+[submodule "fortISSimO"]
+	path = fortISSimO
+	url = https://github.com/ISSOtm/fortISSimO.git
