--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "hardware.inc"]
-	path = src/hardware.inc
+	path = src/include/hardware.inc
 	url = https://github.com/gbdev/hardware.inc.git
