Checkout with submodules 2

--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -46,7 +46,8 @@ jobs:
       - id: checkout-schlange
         name: "Checkout CodeWithMa/schlange"
         uses: actions/checkout@v4
-        submodules: true
+        with:
+          submodules: true
 
       # BUILD ROMS
       - id: build-schlange
