--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -23,7 +23,7 @@ jobs:
         name: "Install build dependencies"
         run: |
           sudo apt-get update
-          sudo apt-get install bison gcc git libpng make -y;
+          sudo apt-get install bison gcc git libpng-dev make -y;
 
       # CHECKOUT RGBDS
       - id: checkout-rgbds
